# pomodoro

./: .gitignore  ReadMe.md  launch.py  new_tye.py  pomodoro.py  pomodoro_execute.py  pomodoro_run.bash  pyproject.toml
.config/: config.toml  dependencies.py
chat_gpt_example/: main.py  test_2.py
src/: pomodoro_execute.py
src/model/: arch.puml  audio.py  boxes.py  draft.py  last.py  new_.py  player.py  test_1.py
src/view/: view.py
